Bug 1796282 - Record the CPU microcode version of AMD CPUs correctly in crash reports r=cmartin

Differential Revision: https://phabricator.services.mozilla.com/D162203